--- a/Dragon Warrior (NES)/Wiki/Dragon Warrior (NES) - ROM map.wikitext
+++ b/Dragon Warrior (NES)/Wiki/Dragon Warrior (NES) - ROM map.wikitext
@@ -147,28 +147,225 @@ Dragon Warrior uses MMC1 mapper with 4 banks of 16KB PRG ROM:
 
 ==Data Tables==
 
-===Monster Data Structure===
-Each monster entry is 16 bytes:
-* Bytes 0-1: HP (16-bit)
-* Byte 2: Attack power
-* Byte 3: Defense power
-* Bytes 4-5: Experience reward (16-bit)
-* Bytes 6-7: Gold reward (16-bit) 
-* Byte 8: Special abilities flags
-* Byte 9: Resistances
-* Bytes 10-11: Graphics tile ID
-* Bytes 12-15: Reserved/padding
+===Detailed Bank 00 Data Tables===
 
-===Item Data Structure===
-Each item entry is 8 bytes:
-* Byte 0: Item ID
-* Byte 1: Item type (weapon/armor/tool)
-* Bytes 2-3: Buy price (16-bit)
-* Bytes 4-5: Sell price (16-bit)
-* Byte 6: Attack/Defense bonus
-* Byte 7: Special properties flags
+'''Item Cost Table''' ($9947-$9990, 74 bytes)
+
+Buy and sell prices for all items, weapons, armor, and shields. Each item uses 2 bytes for buy price (little-endian).
+
+{| class="wikitable sortable"
+!  Address  !!  Item  !!  Buy Price  !!  Notes
+|-
+|  $9947-$9948  ||  Herb  ||  24 GP  ||  Restores 23-30 HP
+|-
+|  $9949-$994A  ||  Magic Key  ||  53 GP  ||  Opens locked doors
+|-
+|  $994B-$994C  ||  Torch  ||  8 GP  ||  Illuminates dark areas
+|-
+|  $994D-$994E  ||  Fairy Water  ||  38 GP  ||  Repels weak monsters
+|-
+|  $994F-$9950  ||  Wings  ||  70 GP  ||  Return to Tantegel
+|-
+|  $9951-$9952  ||  Dragon's Scale  ||  20 GP  ||  Reduces damage by 1/3
+|-
+|  $9953-$9954  ||  Cursed Belt  ||  360 GP  ||  Cursed item, -2 AGI
+|-
+|  $9955-$9956  ||  Death Necklace  ||  2400 GP  ||  Cursed item, causes death
+|-
+|  $9957-$9958  ||  Bamboo Pole  ||  10 GP  ||  +2 ATK
+|-
+|  $9959-$995A  ||  Club  ||  60 GP  ||  +4 ATK
+|-
+|  $995B-$995C  ||  Copper Sword  ||  180 GP  ||  +10 ATK
+|-
+|  $995D-$995E  ||  Hand Axe  ||  560 GP  ||  +15 ATK
+|-
+|  $995F-$9960  ||  Broad Sword  ||  1500 GP  ||  +20 ATK
+|-
+|  $9961-$9962  ||  Flame Sword  ||  9800 GP  ||  +28 ATK
+|-
+|  $9963-$9964  ||  Clothes  ||  20 GP  ||  +2 DEF
+|-
+|  $9965-$9966  ||  Leather Armor  ||  70 GP  ||  +4 DEF
+|-
+|  $9967-$9968  ||  Chain Mail  ||  300 GP  ||  +10 DEF
+|-
+|  $9969-$996A  ||  Half Plate  ||  1000 GP  ||  +16 DEF
+|-
+|  $996B-$996C  ||  Full Plate  ||  3000 GP  ||  +24 DEF
+|-
+|  $996D-$996E  ||  Magic Armor  ||  7700 GP  ||  +24 DEF, regenerates HP
+|-
+|  $996F-$9970  ||  Small Shield  ||  90 GP  ||  +4 DEF
+|-
+|  $9971-$9972  ||  Large Shield  ||  800 GP  ||  +10 DEF
+|-
+|  $9973-$9974  ||  Silver Shield  ||  14800 GP  ||  +20 DEF, blocks breath
+|}
+
+'''Weapon Bonus Table''' ($99CF-$99DE, 16 bytes)
+
+Attack power bonuses for each weapon.
+
+'''Armor Bonus Table''' ($99DF-$99EE, 16 bytes)
+
+Defense bonuses for each armor piece.
+
+'''Shield Bonus Table''' ($99EF-$99FE, 16 bytes)
+
+Defense bonuses for each shield.
+
+===Detailed Bank 01 Data Tables===
+
+'''Monster Stats Table''' ($9000-$94FF, 1280 bytes)
+
+40 monsters × 16 bytes per entry = 640 bytes used. Each entry:
+* +$00-$01: HP (little-endian, 16-bit)
+* +$02: Attack Power (8-bit)
+* +$03: Defense Power (8-bit)
+* +$04-$05: Experience Reward (little-endian, 16-bit)
+* +$06-$07: Gold Reward (little-endian, 16-bit)
+* +$08: Special Abilities Flags
+* +$09: Resistance Flags
+* +$0A-$0B: Graphics Tile ID (16-bit)
+* +$0C-$0F: Reserved/Padding (4 bytes)
+
+'''Experience Requirements Table''' ($9500-$95FF, 256 bytes)
+
+Total experience required for each level (1-30). Each entry is 2 bytes (little-endian):
+* Level 1: 0 EXP
+* Level 2: 7 EXP
+* Level 10: 2000 EXP
+* Level 20: 28000 EXP
+* Level 30: 65535 EXP (max)
+
+'''Player Base Stats Table''' ($9600-$96FF, 256 bytes)
+
+Base HP/MP gain per level and stat modifiers.
+
+'''Spell Data Table''' ($9700-$97FF, 256 bytes)
+
+Spell MP costs and effect parameters:
+* HEAL: 4 MP, restores 10-17 HP
+* HURT: 2 MP, deals 5-12 damage
+* SLEEP: 2 MP, 62.5% base chance
+* RADIANT: 3 MP, radius 3 tiles
+* STOPSPELL: 2 MP, 62.5% base chance
+* OUTSIDE: 6 MP, warp to dungeon exit
+* RETURN: 8 MP, warp to Tantegel
+* REPEL: 2 MP, 127 steps duration
+* HEALMORE: 10 MP, restores 85-100 HP
+* HURTMORE: 5 MP, deals 58-65 damage
+
+===Detailed Bank 03 Code Routines===
+
+'''Battle System Routines'''
+
+{| class="wikitable"
+!  Address  !!  Routine  !!  Description
+|-
+|  ~$C000  ||  CalcPhysicalDamage  ||  Damage = (ATK/2) - (DEF/4) + Random(0,4)
+|-
+|  ~$C100  ||  CheckCriticalHit  ||  CritChance = AGI/64, Damage × 2 if crit
+|-
+|  ~$C200  ||  CheckHit  ||  Player: 87.5% - (EnemyAGI/4), Enemy: 75% - (PlayerAGI/2)
+|-
+|  ~$C300  ||  CheckDodge  ||  DodgeChance = PlayerAGI/4
+|-
+|  ~$C700  ||  BattleVictory  ||  Award experience and gold
+|}
+
+'''Level-Up Routines'''
+
+{| class="wikitable"
+!  Address  !!  Routine  !!  Description
+|-
+|  ~$CB00  ||  HPGainTable  ||  Base HP gain per level (5-28 + 0-3 random)
+|-
+|  ~$CB80  ||  MPGainTable  ||  Base MP gain per level (0-20 + 0-2 random)
+|-
+|  ~$CC00  ||  LevelUpSTR  ||  Even levels: +2-4, Odd levels: +1-3
+|-
+|  ~$CC50  ||  LevelUpAGI  ||  Odd levels: +2-5, Even levels: +1-3
+|-
+|  ~$CD00  ||  CheckSpellLearning  ||  Check if new spell unlocked at level
+|}
+
+'''Spell Effect Routines'''
+
+{| class="wikitable"
+!  Address  !!  Routine  !!  Description
+|-
+|  ~$D000  ||  SpellHEAL  ||  Restore 10-17 HP, 4 MP cost
+|-
+|  ~$D050  ||  SpellHEALMORE  ||  Restore 85-100 HP, 10 MP cost
+|-
+|  ~$D100  ||  SpellHURT  ||  Deal 5-12 - (DEF/8) damage, 2 MP
+|-
+|  ~$D150  ||  SpellHURTMORE  ||  Deal 58-65 - (DEF/4) damage, 5 MP
+|-
+|  ~$D200  ||  SpellSLEEP  ||  62.5% - (Level×2) success, 2 MP
+|-
+|  ~$D250  ||  SpellSTOPSPELL  ||  62.5% - (Level×3) success, 2 MP
+|-
+|  ~$D300  ||  SpellRADIANT  ||  Light radius 3 tiles, 3 MP
+|-
+|  ~$D350  ||  SpellOUTSIDE  ||  Warp to dungeon exit, 6 MP
+|-
+|  ~$D380  ||  SpellRETURN  ||  Warp to (43,43) Tantegel, 8 MP
+|-
+|  ~$D400  ||  SpellREPEL  ||  Block encounters 127 steps, 2 MP
+|}
+
+'''Item Effect Routines'''
+
+{| class="wikitable"
+!  Address  !!  Routine  !!  Description
+|-
+|  ~$D600  ||  UseHerb  ||  Restore 23-30 HP
+|-
+|  ~$D650  ||  UseTorch  ||  Light radius 3 tiles until battle
+|-
+|  ~$D700  ||  UseWings  ||  Warp to Tantegel (43,43)
+|-
+|  ~$D750  ||  ApplyDragonScale  ||  Reduce damage by 1/3
+|-
+|  ~$D800  ||  UseRainbowDrop  ||  Create bridge at (69,69)
+|}
+
+'''Encounter System Routines'''
+
+{| class="wikitable"
+!  Address  !!  Routine  !!  Description
+|-
+|  ~$E000  ||  EncounterCheck  ||  Check every 8 steps, rate varies by zone
+|-
+|  ~$E100  ||  SelectEncounter  ||  Choose enemy from zone table
+|-
+|  ~$E200  ||  AttemptFlee  ||  75% + (PlayerAGI-EnemyAGI)/4, min 25%, max 87.5%
+|}
+
+'''Enemy AI Routines'''
+
+{| class="wikitable"
+!  Address  !!  Routine  !!  Description
+|-
+|  ~$E400  ||  ProcessEnemyTurn  ||  25% spell cast chance if able
+|-
+|  ~$E500  ||  DragonlordAI  ||  Special AI for final boss forms
+|}
+
+'''Encounter Rate Constants'''
+
+* Tantegel area: 16/256 (6.25%)
+* Grassland: 32/256 (12.5%)
+* Forest: 48/256 (18.75%)
+* Hills: 64/256 (25%)
+* Mountains: 80/256 (31.25%)
+* Swamp: 96/256 (37.5%)
 
 ===Shop Data Structure===
+
 Shop item lists are variable length, terminated by $FD:
 * Each byte represents an item ID from the item table
 * $FD = End of shop inventory
@@ -180,14 +377,60 @@ Shop item lists are variable length, terminated by $FD:
 {| class="wikitable"
 !  Address  !!  Description
 |-
-|  $2000-$2007  ||  PPU registers
+|  $2000-$2007  ||  PPU registers (PPUCTRL, PPUMASK, PPUSTATUS, etc.)
 |-
 |  $4000-$4017  ||  APU and controller registers
 |-
-|  $4018-$5FFF  ||  MMC1 mapper registers
+|  $4018-$5FFF  ||  MMC1 mapper registers (bank switching)
 |-
-|  $6000-$7FFF  ||  Battery-backed SRAM (8KB)
+|  $6000-$7FFF  ||  Battery-backed SRAM (8KB save data)
 |}
+
+==Game Constants==
+
+===Battle System Constants===
+
+* Player ATK Divisor: 2
+* Enemy DEF Divisor: 4
+* Damage Variance: 0-4
+* Enemy STR Divisor: 2
+* Player DEF Divisor: 4
+* Crit AGI Divisor: 64
+* Crit Multiplier: 2×
+* Player Base Hit: 224/256 (87.5%)
+* Enemy Base Hit: 192/256 (75%)
+* Dodge AGI Divisor: 4
+
+===Spell Constants===
+
+* HEAL: 10-17 HP, 4 MP
+* HEALMORE: 85-100 HP, 10 MP
+* HURT: 5-12 damage - (DEF/8), 2 MP
+* HURTMORE: 58-65 damage - (DEF/4), 5 MP
+* SLEEP: 160/256 base - (Level×2), min 32/256, 2 MP
+* STOPSPELL: 160/256 base - (Level×3), min 16/256, 2 MP
+* RADIANT: 3 tile radius, 3 MP
+* REPEL: 127 steps, 2 MP
+* OUTSIDE: 6 MP
+* RETURN: 8 MP, target (43,43)
+
+===Stat Growth Constants===
+
+* HP Random Bonus: 0-3
+* MP Random Bonus: 0-2
+* STR Even Levels: 2-4
+* STR Odd Levels: 1-3
+* AGI Odd Levels: 2-5
+* AGI Even Levels: 1-3
+
+===Technical Limits===
+
+* Max Level: 30
+* Max HP/MP/STR/AGI/ATK/DEF: 255 (8-bit)
+* Max Gold/EXP: 65535 (16-bit)
+* Inventory Slots: 8
+* Map Width/Height: 120 tiles (overworld)
+* Max Interior: 32×32 tiles
 
 =References=
 
@@ -195,3 +438,4 @@ Shop item lists are variable length, terminated by $FD:
 * Dragon Warrior Data Crystal pages
 * NES mapper documentation
 * [https://hexed.it/ HexEd.it] - Browser-based hex editor for ROM analysis and modification
+* Formula documentation from GAME_FORMULAS.md in Dragon Warrior Info Project
